Update clank from 469 tarball release.
This commit is the delta from chrome_android.v18.0.1025123.tgz, to
the newer chrome_android.v18.0.1025469.tgz release tarball.